# static-server

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  build.rs
examples/: folder.rs  server.rs  static.tar
examples/static/: index.html  style.css
examples/static/js/: app.js
src/: arena-workspace.sublime-workspace  lib.rs  lib.rs.orig  main.rs  provider.rs  server.rs
src/provider/: folder.rs  mod.rs  tar.rs
tests/: test_providers.rs
