[package]
name = "static-server"
version = "0.0.10"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
description = "Library for serve static files by HTTP"
repository = "https://github.com/DenisKolodin/static-server"
license = "MIT/Apache-2.0"
build = "build.rs"

[[bin]]
name = "static-server"
doc = false

[dependencies]
log = "0.3.6"
env_logger = "0.3.5"
mime_guess = "1.8.1"
mime = "0.2.2"
hyper = "0.9.14"
tar = "0.4.9"

