[package]
name = "static-server"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]

[dependencies]
log = "0.3.8"
futures = "0.1.14"
futures-cpupool = "0.1.5"
tokio-io = "0.1.3"
bytes = "0.4.5"
hyper = "0.11.2"
tokio-file-unix = "0.3.0"

[dev-dependencies]
pretty_env_logger = "0.1.1"
